k8s/catalog-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: edunicastro/catalog
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-srv
spec:
  selector:
    app: catalog
  ports:
    - name: catalog
      protocol: TCP
      port: 3000
