k8s/worker-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: edunicastro/worker
---
apiVersion: v1
kind: Service
metadata:
  name: worker-srv
spec:
  selector:
    app: worker
  ports:
    - name: worker
      protocol: TCP
      port: 3000
