k8s/worker-redis-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-redis
  template:
    metadata:
      labels:
        app: worker-redis
    spec:
      containers:
      - name: worker-redis
        image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: worker-redis-srv
spec:
  selector:
    app: worker-redis
  ports:
  - name: db
    protocol: TCP
    port: 6379
